--- a/css/custom.css
+++ b/css/custom.css
@@ -1,11 +1,17 @@
+.masthead-nav, .masthead-brand {
+	display:none;
+}
 h1 {
   margin-bottom:40px;
+}
+.modal-content {
+	background-color:#5A5A5A;
 }
 .cover-container {
   margin-top:120px;
 }
 .nav-tabs {
-  width:240px;
+  width:147px;
   margin: 0 auto 0 auto;
   margin-bottom:20px;
   
@@ -16,9 +22,11 @@ h1 {
 .mainBox {
   border:3px solid white;
   border-radius:4px;
-  width:70%;
+  min-width:310px;
+	max-width:500px;
   height:580px;
   margin:auto;
+	margin-bottom:32px;
   position: relative;
   background-color:black;
   -webkit-box-shadow: 10px 10px 5px 0px rgba(33,33,33,1);
@@ -73,12 +81,17 @@ h1 {
     background-color: white;
     position: absolute;
     border-radius: 18px;
-    background-image: url('img/power_socket_us.jpg');
+    background-image: url('../img/power_socket_us.jpg');
     background-size: 100px 66px;
     background-position: center;
     -ms-transform: rotate(270deg); 
     -webkit-transform: rotate(270deg);
     transform: rotate(270deg);
+}
+.output span {
+		font-size: 20px;
+ 		top:-30px;
+		position:relative;		
 }
 #output1 {
   top:100px;
@@ -103,24 +116,6 @@ h1 {
 #l2 {
   right:55px;
   text-align:right;
-}
-#newRule {
-  margin: auto;
-  display: block;
-  margin-top: 40px;
-}
-#editor select {
-  font-size:16px;
-}
-
-#editor .a {
-  padding-top: 10px;
-  margin-top:10px;
-  border-top: 1px dotted gray;
-}
-#editor .a:first-of-type {
-  padding-top: initial;
-  border-top: initial;
 }
 
 
@@ -203,4 +198,9 @@ li.ui-timepicker-selected .ui-timepicker-duration,
 }
 
 
-
+/*Overwrites */
+@media (min-width: 768px) {
+	.mastfoot {
+			position: static;
+	}
+}
