--- a/css/custom.css
+++ b/css/custom.css
@@ -4,6 +4,12 @@
 h1 {
   margin-bottom:40px;
 }
+h1.glow {
+	color: #B6FF00;
+	-webkit-animation: neon4 1.5s ease-in-out infinite alternate;
+  -moz-animation: neon4 1.5s ease-in-out infinite alternate;
+  animation: neon4 1.5s ease-in-out infinite alternate;
+}
 .modal-content {
 	background-color:#5A5A5A;
 }
@@ -16,9 +22,7 @@ h1 {
 }
 .nav-tabs {
   width:147px;
-  margin: 0 auto 0 auto;
-  margin-bottom:20px;
-  
+  margin: 35px auto;
 }
 .site-wrapper-inner {
   vertical-align:top;
@@ -242,4 +246,14 @@ a.introjs-button:focus {
 	.mastfoot {
 			position: static;
 	}
+}
+
+/*animations*/
+@-webkit-keyframes neon4 {
+  from {
+    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #B6FF00, 0 0 70px #B6FF00, 0 0 80px #B6FF00, 0 0 100px #B6FF00, 0 0 150px #B6FF00;
+  }
+  to {
+    text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #B6FF00, 0 0 35px #B6FF00, 0 0 40px #B6FF00, 0 0 50px #B6FF00, 0 0 75px #B6FF00;
+  }
 }
