--- a/css/custom.css
+++ b/css/custom.css
@@ -11,6 +11,9 @@ h1.glow {
   -moz-animation: neon4 1.5s ease-in-out infinite alternate;
   animation: neon4 1.5s ease-in-out infinite alternate;
 }
+select {
+	color:#545454;
+}
 .modal-content {
 	background-color:#5A5A5A;
 }
