--- a/css/custom.css
+++ b/css/custom.css
@@ -5,6 +5,9 @@ h1 {
   margin-bottom:40px;
 	font-size:48px;
 }
+h1, h3 {
+		font-weight:200;
+}
 h1.glow {
 	color: #B6FF00;
 	-webkit-animation: neon4 1.5s ease-in-out infinite alternate;
@@ -25,7 +28,7 @@ select {
   margin-top:40px;
 }
 .nav-tabs {
-  width:156px;
+  width:172px;
   margin: 35px auto;
 }
 .site-wrapper-inner {
